@@ -18,11 +18,13 @@ if (autostart == "true"):
 	print "script.advanced.wol: Waiting for resume from standby"
 	previousTime = time.time()
 	while (not xbmc.abortRequested):
-		if ( time.time()-previousTime > 5):
+		elapsedTime = time.time()-previousTime
+		if ( elapsedTime > 5):
 			if (wolDelayAfterStandby > 0):
 				xbmc.sleep(wolDelayAfterStandby*1000)
-			print "script.advanced.wol: Start WOL script after return from standby"
+			print "script.advanced.wol: Start WOL script after return from standby (Standby took "+time.time()-previousTime+" sec.)"
 			default.main(True)
+			print "script.advanced.wol: Waiting for resume from standby"
 			previousTime = time.time()
 			xbmc.sleep(1000)
 		else:
