@@ -1,3 +1,7 @@
+[B]1.2.3[/B]
+- Add some further log-messages regarding wakeup and library-updates
+- Add option to set delay of library-updates (should fix problems when filesystem on server/nas is not ready yet after successful wake-up)
+
 [B]1.2.2[/B]
 - Added help-text in autostart-settings stating that changes require a restart of XBMC to take effect
 
